letter spacing issues

--- a/styles.css
+++ b/styles.css
@@ -143,7 +143,8 @@ body {
 .separator {
   width: 270px;
   height: 1px;
-  background-color: #000;
+  opacity: 0.3;
+  background: #a9a9a9;
   border: none;
   margin: 40px 0; /* Adjust margin as needed */
 }
@@ -376,7 +377,7 @@ body.fade-in .unlock-box {
   font-style: normal;
   font-weight: 400;
   line-height: normal;
-  letter-spacing: 2px;
+  letter-spacing: 0px;
   opacity: 0.8;
   margin-left: 16px !important;
   margin-right: 24px !important;
@@ -732,7 +733,7 @@ h3 a {
   height: auto;
   position: relative;
   scroll-behavior: smooth;
-  padding-top: 32px;
+  padding-top: 12px;
 }
 
 .slide {
@@ -796,7 +797,7 @@ h3 a {
 .slider-content {
   display: flex;
   overflow: hidden;
-  background-color: rgba(255, 255, 255, 1);
+  background: #423b3d;
   width: 100%;
 
   height: auto;
@@ -832,20 +833,19 @@ h3 a {
   overflow-y: hidden;
 }
 .text-content h2 {
-  color: #a6a171;
-  margin: 0;
+  color: #d2cfb5;
 
-  font-family: Merriweather;
-  font-size: 14px;
+  font-family: "Agentur";
+  font-size: 16px;
   font-style: normal;
   font-weight: 400;
-  line-height: 160%; /* 22.4px */
+  line-height: 160%; /* 25.6px */
 }
 
 .text-content p {
-  color: #0f0f0f;
+  color: #fff;
 
-  font-family: "Work Sans";
+  font-family: "Avenir";
   font-size: 12px;
   font-style: normal;
   font-weight: 400;
